argoproj/prometheus-operator/overlays/dashboard-placement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      affinity: null
      tolerations:
        - key: lolice.io/gpu-worker
          operator: Equal
          value: "true"
          effect: NoSchedule
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  template:
    spec:
      affinity: null
      tolerations:
        - key: lolice.io/gpu-worker
          operator: Equal
          value: "true"
          effect: NoSchedule
