argoproj/prometheus-operator/overlays/monitoring-deployment-tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  template:
    spec:
      tolerations:
        - key: lolice.io/gpu-worker
          operator: Equal
          value: "true"
          effect: NoSchedule
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  template:
    spec:
      tolerations:
        - key: lolice.io/gpu-worker
          operator: Equal
          value: "true"
          effect: NoSchedule
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: monitoring
spec:
  template:
    spec:
      tolerations:
        - key: lolice.io/gpu-worker
          operator: Equal
          value: "true"
          effect: NoSchedule
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  namespace: monitoring
spec:
  template:
    spec:
      tolerations:
        - key: lolice.io/gpu-worker
          operator: Equal
          value: "true"
          effect: NoSchedule
